Big restyling. Add translations. Change data structure